Added section 'The Spinozist approach to Quantum Physics'

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -301,7 +301,7 @@ The birth of Quantum Physics in the 1920s has been marked by a long period of in
 
 \section*{Philosophical motivation}
 
-Most philosophers have ascribed a central role to the ethics in their work, as the answer to the question ``How should I live?'' requires a preliminary reflection about all the fields of our existence, from metaphysics via physics, psychology and morals up to politics. Up to the emergence of Quantum Field Theory in the late 1920s, philosophers have always been able to integrate the knowledge gathered in the field of physics into their world view: In 17th-century Europe, for instance, the Dutch philosopher Baruch Spinoza worked out in his \textit{Ethics}~\cite{Spinoza1677} the deterministic materialism of classical mechanics and based his philosophy on the idea that everything in Nature happens according to the divine necessity, both at the material and at the spiritual level. In fact, from the Antics up to the Age of Enlightenment, physicists used to consider themselves primarily as Nature philosophers. In the modern ages, however, the scientific community began to split under the influence of industrial work organization into small groups of specialists lacking interdisciplinary skills. Nowadays, mainstream physicists even consider philosophical interpretations of physics as non-scientific and pointless. Needless to say, such a lack of intellectual rigor has had serious consequences for the conceptual and formal quality of physical theories. In the case of Quantum Field Theory, this attitude has resulted in the fact that, for the last eighty years, no consensus could be reached on its two major issues, known as the \textit{measurement problem} and the \textit{main issue}. The latter is a formal issue consisting in conceiving a mathematically well-defined quantum field theory formally compatible to Special Relativity\footnotemark[1], which would be highly desirable but is thought to be technically impossible, although this hasn't been proved definitely yet. The former is an interpretation issue concerning the relation between ``mind'', i.e. the primitive form of our experience of the world, and ``body'', i.e. the physical world described in terms of quantum fields. There have been numerous propositions for this interpretation, from the very beginning of Quantum Field Theory in the 1920s and 1930s until now, but as long as the mathematical formalism of the theory is ill-defined, these interpretations cannot be formulated precisely either. Strictly speaking, however, the whole theory doesn't make any sense if this interpretation issue doesn't become precisely answered. In order to give a sound philosophical interpretation of Quantum Field Theory, it is therefore necessary in the first place to put the mathematical formalism on a well-defined basis. The theory cannot be formally compatible with Special Relativity if the main issue really cannot be solved; Relativity Theory should then emerge as an approximation at usual energy and distance scales. In this book, I shall propose an answer to both issues, describe very precisely the form of the relation between mind and body according to Quantum Physics and thus lay the foundations of an ethic taking into account the world view sustained by Quantum Field Theory.
+Most philosophers have ascribed a central role to the ethics in their work, as the answer to the question ``How should I live?'' requires a preliminary reflection about all the fields of our existence, from metaphysics via physics, psychology and morals up to politics. Up to the emergence of Quantum Field Theory in the late 1920s, philosophers have always been able to integrate the knowledge gathered in the field of physics into their world view: In 17th-century Europe, for instance, the Dutch philosopher Baruch Spinoza worked out in his \textit{Ethics}~\cite{Spinoza1677} the deterministic materialism of classical mechanics and based his philosophy on the idea that everything in Nature happens according to the divine necessity, both at the material and at the spiritual level. In fact, from the Antics up to the Age of Enlightenment, physicists used to consider themselves primarily as Nature philosophers. In the modern ages, however, the scientific community began to split under the influence of industrial work organization into small groups of specialists lacking interdisciplinary skills. Nowadays, mainstream physicists even consider philosophical interpretations of Physics as non-scientific and pointless. Needless to say, such a lack of intellectual rigor has had serious consequences for the conceptual and formal quality of physical theories. In the case of Quantum Field Theory, this attitude has resulted in the fact that, for the last eighty years, no consensus could be reached on its two major issues, known as the \textit{measurement problem} and the \textit{main issue}. The latter is a formal issue consisting in conceiving a mathematically well-defined quantum field theory formally compatible to Special Relativity\footnotemark[1], which would be highly desirable but is thought to be technically impossible, although this hasn't been proved definitely yet. The former is an interpretation issue concerning the relation between ``mind'', i.e. the primitive form of our experience of the world, and ``body'', i.e. the physical world described in terms of quantum fields. There have been numerous propositions for this interpretation, from the very beginning of Quantum Field Theory in the 1920s and 1930s until now, but as long as the mathematical formalism of the theory is ill-defined, these interpretations cannot be formulated precisely either. Strictly speaking, however, the whole theory doesn't make any sense if this interpretation issue doesn't become precisely answered. In order to give a sound philosophical interpretation of Quantum Field Theory, it is therefore necessary in the first place to put the mathematical formalism on a well-defined basis. The theory cannot be formally compatible with Special Relativity if the main issue really cannot be solved; Relativity Theory should then emerge as an approximation at usual energy and distance scales. In this book, I shall propose an answer to both issues, describe very precisely the form of the relation between mind and body according to Quantum Physics and thus lay the foundations of an ethic taking into account the world view sustained by Quantum Field Theory.
 
 \footnotetext[1]{Precisely, one requires that the classical Lagrangian used in the heuristical construction of the theory be Poincaré invariant and describes local (contact) interactions of point particles in the Minkowski space-time.}
 
@@ -1034,15 +1034,19 @@ If the observer had made instead another kind of measurement on the decaying ato
 
 \section{Epistemological considerations}
 
-From a historical perspective, it should become quite clear today why the founders of Quantum Physics have had such difficulties to agree on an interpretation of this new branch of physics. Starting with a few subatomic experiments, like the measurement of the emission spectrum of hydrogen atoms, they ended with a theory bringing along a twofold scientific revolution and profoundly revising our world view.
+From a historical perspective, it should become quite clear today why the founders of Quantum Physics have had such difficulties to agree on an interpretation of this new branch of Physics. Starting with a few subatomic experiments, like the measurement of the emission spectrum of hydrogen atoms, they ended with a theory bringing along a twofold scientific revolution and profoundly revising our world view.
 
-The first revolution, which is nowadays widely accepted, concerns the fact that the physical reality cannot be described within our usual mental categories. The most classical example is the so-called wave-particle duality, which implies that elementary particles, and as a consequence also atoms and molecules for instance, can occupy several positions in space at a time and that their motion follow wave equations and interference patterns typical for wave phenomena. And ultimately, not only invisible particles, but also configurations of the whole universe can combine with each other via wave amplitudes and interfere in their evolution in a similar way as waves would do. This has been a big paradigm change compared to the ideal of classical physics, where intelligibility, i.e. the adequation to our mental categories, was considered an essential characteristic of any scientific theory. The position of Louis de Broglie, for instance, is typical for the efforts to resist this paradigm change. After having proposed himself the relation $\lambda = \h / p$ between the momentum $p$ of a particle and the wavelength $\lambda$ of the corresponding wave phenomena, he developed the Pilot-Wave Theory, an alternative interpretation of Quantum Mechanics (that we know today to be false) according to which both the particle and the corresponding wave have their own existence and can be described as in classical physics, i.e. according to our mental categories -- the particle having a definite trajectory and being ``guided'' by the accompanying wave.
+The first revolution, which is nowadays widely accepted, concerns the fact that the physical reality cannot be described within our usual mental categories. The most classical example is the so-called wave-particle duality, which implies that elementary particles, and as a consequence also atoms and molecules for instance, can occupy several positions in space at a time and that their motion follow wave equations and interference patterns typical for wave phenomena. And ultimately, not only invisible particles, but also configurations of the whole universe can combine with each other via wave amplitudes and interfere in their evolution in a similar way as waves would do. This has been a big paradigm change compared to the ideal of Classical Physics, where intelligibility, i.e. the adequation to our mental categories, was considered an essential characteristic of any scientific theory. The position of Louis de Broglie, for instance, is typical for the efforts to resist this paradigm change. After having proposed himself the relation $\lambda = \h / p$ between the momentum $p$ of a particle and the wavelength $\lambda$ of the corresponding wave phenomena, he developed the Pilot-Wave Theory, an alternative interpretation of Quantum Mechanics (that we know today to be false) according to which both the particle and the corresponding wave have their own existence and can be described as in Classical Physics, i.e. according to our mental categories -- the particle having a definite trajectory and being ``guided'' by the accompanying wave.
 
 The second scientific revolution, which is far from being over yet, concerns the fact that consciousness actively modifies the physical state of the universe, according to its own mental categories and in its own way, which cannot be reduced to other, purely physical phenomena: Technically, the collapse of a physical state from $\ket \Psi$ to $\op{\Pi}_\cms \ket \Psi$ obviously cannot be reduced to a Hamiltonian evolution of the form $\op U_\tau \ket \Psi$. This is of course a radical paradigm change compared to the Cartesianism of the Copenhagen interpretation, according to which the consciousness of the ``observer'' passively takes notice of some aspects of the physical world, e.g. the (supposedly well-defined) state of a measurement apparatus. A typical opponent to this paradigm change is Albert Einstein, who saw with very critical eyes the ``spooky action at a distance'' implied by the collapse of the physical state of the universe, i.e. the instantaneous modification of the physical state of a distant object happening when the consciousness state of a previously correlated brain is being selected. The famous Einstein-Podolsky-Rosen thought experiment, which has been conceived to illustrate these non-local features of collapse (i.e. its incompatibility to one of the central principles of Special Relativity), was thought to invalidate definitely the hypothesis of collapse, because it was conceived under the assumptions that all physical phenomena should obey the same laws, described in Quantum Theory by the Hamiltonian evolution operator $\op U_\tau$, and that collapse should ultimately be described in that way instead of using the ad-hoc assumption of the intervention of a projection operator $\op{\Pi}_\cms$. However, as this experiment has been realized for instance by the team of Alain Aspect~\cite{Aspect1982} in experimental conditions becoming more and more sophisticated, the non-locality of quantum measurement has always been demonstrated very clearly, so that it makes no doubt today that collapse does obey other physical laws than the Hamiltonian evolution.
 
-The first milestone of this second scientific revolution has been set by John von Neumann with the idea that ``mind causes collapse''~\cite{Neumann1932}. This idea addresses a leak in the Copenhagen interpretation, where we distinguish between a ``macroscopic world'', supposed to be ruled by the laws of classical physics, and a ``microscopic world'', ruled by the laws of Quantum Physics. The interface between both worlds is build by measurement apparatuses, which are supposed to cause the collapse of the quantum state of the microscopic world when they interact with it. This interpretation relies on the assumption that no quantum phenomenon can be observed without the help of a measurement apparatus, which is obviously false. For instance, you can observe with your naked eyes the diffraction patterns of light passing in the dark through the fine structures of woven fabric, and that is a genuine quantum phenomenon. One could maybe ``save'' the Copenhagen interpretation by considering that the eye constitute the measurement apparatus in that case, but where do an eye actually begin: With the cornea, the pupil, the retina, the retinal ganglion cells? Or even inside the brain, after the neural processing of visual perceptions? Defining the frontier between the microscopic and the macroscopic world seems to be a rather arbitrary operation and it is therefore not really intellectually satisfying. The only thing we are sure of is that, ultimately, our consciousness ``resolves'' quantum superpositions according to our mental categories. This idea that, ultimately, consciousness causes collapse was once known as the `standard interpretation' of Quantum Mechanics. It has been almost forgotten since, perhaps because it had been originally formulated all to vaguely to be taken seriously. In this book, I am formulating it again using a very precise and well-defined formalism, so that one can unambiguously derive its implications on a very solid basis. I hope that this contribution will help reconsidering the profound implications of this second scientific revolution and widening its acceptance in the scientific community.
+The first milestone of this second scientific revolution has been set by John von Neumann with the idea that ``mind causes collapse''~\cite{Neumann1932}. This idea addresses a leak in the Copenhagen interpretation, where we distinguish between a ``macroscopic world'', supposed to be ruled by the laws of Classical Physics, and a ``microscopic world'', ruled by the laws of Quantum Physics. The interface between both worlds is build by measurement apparatuses, which are supposed to cause the collapse of the quantum state of the microscopic world when they interact with it. This interpretation relies on the assumption that no quantum phenomenon can be observed without the help of a measurement apparatus, which is obviously false. For instance, you can observe with your naked eyes the diffraction patterns of light passing in the dark through the fine structures of woven fabric, and that is a genuine quantum phenomenon. One could maybe ``save'' the Copenhagen interpretation by considering that the eye constitute the measurement apparatus in that case, but where do an eye actually begin: With the cornea, the pupil, the retina, the retinal ganglion cells? Or even inside the brain, after the neural processing of visual perceptions? Defining the frontier between the microscopic and the macroscopic world seems to be a rather arbitrary operation and it is therefore not really intellectually satisfying. The only thing we are sure of is that, ultimately, our consciousness ``resolves'' quantum superpositions according to our mental categories. This idea that, ultimately, consciousness causes collapse was once known as the `standard interpretation' of Quantum Mechanics. It has been almost forgotten since, perhaps because it had been originally formulated all to vaguely to be taken seriously. In this book, I am formulating it again using a very precise and well-defined formalism, so that one can unambiguously derive its implications on a very solid basis. I hope that this contribution will help reconsidering the profound implications of this second scientific revolution and widening its acceptance in the scientific community.
 
-%\section{The Spinozist approach to Quantum Physics}
+\section{The Spinozist approach to Quantum Physics}
+
+The Spinozist aspects of our interpretation of Quantum Field Theory concern this second scientific revolution, i.e. the role of consciousness in physical processes. Historically, Spinoza's philosophy developed on top of Cartesianism, which considers the physical world to be a mechanical, deterministic one and consciousness to be a passive, external observer of the happenings in the physical world; although this physical world is supposed to obey the very strict laws of Classical Mechanics, the mental world is supposed to be absolutely free, independent of the physical one and obeying no specific laws. Spinoza conserved this mechanical view of the physical world, but tried to ground the mental world upon the physical one, considering that consciousness cannot exist independently of a physical body, that it reflects the state of its physical substrate and therefore obeys the same laws, which can be transposed, in principle, to the mental world. Thus, consciousness becomes again part of Nature; it isn't considered any more to exist in an ideal realm exterior to the contingencies of the physical world.
+
+Our interpretation of Quantum Field Theory relates to the Copenhagen interpretation in a similar way as Spinozism relates to Cartesianism. In the Copenhagen interpretation, the microscopic world only -- and only the limited system under consideration -- is supposed to obey the laws of Quantum Physics, i.e. the Hamiltonian evolution and the collapse as the system interacts with a measurement apparatus. On the contrary, the macroscopic world, including the observer, is supposed to exist in an ideal realm where only the (Cartesian) laws of Classical Physics apply. In a genuine Spinozist approach, our interpretation grounds this ideal realm upon the physical realm of the quantum world: The arbitrary distinction between a microscopic and a macroscopic world vanishes, whereas collapse is supposed not to happen in an interaction with a measurement apparatus -- a mere artifact -- but with brains -- the physical substrate of a fundamental aspect of Nature, consciousness. Mind becomes thus again part of Nature, and comes along with its own properties and physical laws, completing the Hamiltonian evolution laws of purely physical processes. Of course, the relation between mind and body is much more complex than in classical Spinozism, but I think that the basic approach of the problem of consciousness is essentially the same, so that we can say, in that sense, that we are developing here a Spinozist interpretation of Quantum Physics.
 
 %TODO Physical issues
 %\chapter{Physical issues}
