--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -1034,7 +1034,7 @@ If the observer had made instead another kind of measurement on the decaying ato
 
 \section{Epistemological considerations}
 
-From a historical perspective, it should become quite clear today why the founders of Quantum Physics have had such difficulties to agree on an interpretation of this new branch of Physics. Starting with a few subatomic experiments, like the measurement of the emission spectrum of hydrogen atoms, they ended with a theory bringing along a twofold scientific revolution and profoundly revising our world view.
+From a historical perspective, it should become quite clear today why the founders of Quantum Physics have had such difficulties to agree on an interpretation of this new branch of Physics. Starting with a few subatomic experiments, like the measurement of the emission spectrum of hydrogen atoms, they ended up with a theory bringing along a twofold scientific revolution and profoundly revising our world view.
 
 The first revolution, which is nowadays widely accepted, concerns the fact that the physical reality cannot be described within our usual mental categories. The most classical example is the so-called wave-particle duality, which implies that elementary particles, and as a consequence also atoms and molecules for instance, can occupy several positions in space at a time and that their motion follow wave equations and interference patterns typical for wave phenomena. And ultimately, not only invisible particles, but also configurations of the whole universe can combine with each other via wave amplitudes and interfere in their evolution in a similar way as waves would do. This has been a big paradigm change compared to the ideal of Classical Physics, where intelligibility, i.e. the adequation to our mental categories, was considered an essential characteristic of any scientific theory. The position of Louis de Broglie, for instance, is typical for the efforts to resist this paradigm change. After having proposed himself the relation $\lambda = \h / p$ between the momentum $p$ of a particle and the wavelength $\lambda$ of the corresponding wave phenomena, he developed the Pilot-Wave Theory, an alternative interpretation of Quantum Mechanics (that we know today to be false) according to which both the particle and the corresponding wave have their own existence and can be described as in Classical Physics, i.e. according to our mental categories -- the particle having a definite trajectory and being ``guided'' by the accompanying wave.
 
