--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -1764,7 +1764,7 @@ We extend these definitions periodically to all $\q \in \ILD$ by $\SAop \pt \q \
 
 \begin{thebibliography}{99}
 
-\bibitem{Aspect1982} Aspect, A.; et al. (1982). \textit{Experimental Realization of Einstein-Podolsky-Rosen-Bohm Gedankenexperiment: A New Violation of Bell's Inequalities}. Physical Review Letters 49: 91, Elsevier, Amsterdam (The Netherlands), 1982.
+\bibitem{Aspect1982} Aspect, A.; et al. (1982). \textit{Experimental Realization of Einstein-Podolsky-Rosen-Bohm Gedankenexperiment: A New Violation of Bell's Inequalities}. Physical Review Letters 49: 91, American Physical Society, College Park (Maryland, United States), 1982.
 
 \bibitem{Bassi2003} Bassi, A.; Ghirardi, G. (2003). \htmladdnormallink{\textit{Dynamical Reduction Models}}{http://arxiv.org/abs/quant-ph/0302164v2}. Physics Reports 379: 257, Elsevier, Amsterdam (The Netherlands), 2003.
 
