Completed the overview

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -317,7 +317,7 @@ The Hamiltonian evolution of quantum fields is then defined very classically for
 
 A general model for the mental world is defined in chapter \ref{Mental states} and the joint stochastic evolution of the physical and mental worlds in chapter \ref{Stochastic evolution}. The basic idea of this model -- that ``mind causes collapse'' -- isn't quite new, as it has first been formulated by John von Neumann~\cite{Neumann1932} and was once known as the `standard interpretation' of Quantum Mechanics. As far as I know, however, it is the first time with this book that a precise interpretation of a mathematically well-defined Quantum Field Theory has ever been given. This provides thus the first sound basis for a discussion of the philosophical implications of the theory, which is the main goal of this book.
 
-The resulting metaphysics are been sketched in chapter \ref{Metaphysics} and a few philosophical issues discussed in chapter \ref{Philosophical issues}.
+The metaphysics of the theory are been sketched in chapter \ref{Metaphysics} and its interpretation discussed at length in chapter \ref{Interpretation}. A few classical philosophical questions are then addressed on this background in chapter \ref{Philosophical issues}.
 
 The interaction Hamiltonian of Quantum  Electrodynamics is then defined in chapter \ref{Quantum Electrodynamics} and, as an example, the semi-classical cross-section of Coulomb scattering is calculated to the leading order in chapter \ref{Coulomb scattering}.
 
@@ -1021,6 +1021,7 @@ The states (modes) of God (the substance) are evidently identified, under their 
 The states of God, taking the general form $(\ket \Psi, \cms)$, are said to be ``real'' if $\ket \Psi \in \H_\cms$ and ``virtual'' otherwise. An elementary evolution step of the state of God proceeds from a real state $(\ket{\Psi_0}, \cms_0)$, first evolving to a generally virtual state $(\op U_\tau \ket{\Psi_0}, \cms_0)$ and eventually collapsing to one of the real states $(\op{\Pi}_{\cms_1} \op U_\tau \ket{\Psi_0}, \cms_1)$ with a probability $\bra{\Psi_0} \dop U_\tau \op{\Pi}_{\cms_1} \op U_\tau \ket{\Psi_0} / \braket{\Psi_0}{\Psi_0}$.
 
 \chapter{Interpretation}
+\label{Interpretation}
 
 \section{The role of consciousness}
 
