--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -1149,7 +1149,7 @@ The anti-particle creation and annihilation spinor operators in this expression 
 \begin{equation*}
 \bra \vac \Qop \n \ket \vac = \e \sum_{\pt,\sp} \Qp \pt = - 4 \e
 \end{equation*}
-Since the charge distribution is uniform, it doesn't have any contribution to the interaction Hamiltonian as defined in section \ref{QED interaction Hamiltonian}.
+and called `zero-point electric charge'. Since this charge distribution is uniform, it doesn't have any contribution to the interaction Hamiltonian as defined in section \ref{QED interaction Hamiltonian}.
 
 \section{Electric current operator}
 
@@ -1157,7 +1157,7 @@ On each point $\n$ of space, the electric current operator is defined by:
 \begin{equation*}
 \Jop \n \eqdef \e \c \sum_{\pt,\sp',\sp} \Qp \pt \left( \SCop \pt \n {\sp'} + \SAop {\antiparticle \pt} \n {\sp'} \right) \gamvec \left( \SAop \pt \n \sp + \SCop {\antiparticle \pt} \n \sp \right)
 \end{equation*}
-where the summation goes over all fermions $\pt$. In this expression, the creation and annihilation spinor operators are defined as in appendix \ref{Dirac spinors} and the Dirac matrices as in appendix \ref{Dirac matrices}.
+where the summation goes over all fermions $\pt$. In this expression too, the creation and annihilation spinor operators are defined as in appendix \ref{Dirac spinors} and the Dirac matrices as in appendix \ref{Dirac matrices}.
 
 \section{Electric potential operator}
 
