--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -1382,7 +1382,7 @@ A Gaussian wave packet of a particle of type $\pt$ and in the spin state $\sp$, 
 \begin{eqnarray*}
 \ket \Psi & = & \dop{G^\pt_\sp}(\q_0,\n_0,w_0) \ket \vac \\
 \dop{G^\pt_\sp}(\q_0,\n_0,w_0) & \eqdef & C(\q_0,w_0) (2w_0)^{3/2} (1+2\N)^{-3/2} \\
-&& \sum_{\q} \exp{-2 \pi w_0^2 \q^2 - \i 2 \pi \q \ssp \n_0} \cop\pt\sp{\q_0+\q}
+&& \sum_{\q} \exp{-2 \pi w_0^2 \q^2 - \i 2 \pi \q \ssp \n_0} \cop\pt{\q_0+\q}\sp
 \end{eqnarray*}
 with the normalization factor:
 \begin{equation*}
@@ -1391,7 +1391,7 @@ C(\q_0,w_0) \eqdef \left[ (2w_0)^3 (1+2\N)^{-3} \sum_{\q} \exp{-4 \pi w_0^2 \q^2
 In the usual case where $1 \ll w_0 \ll \N$, this normalization factor approximates to 1. On the position basis, the creation operator of the Gaussian wave packet can be expressed as:
 \begin{eqnarray*}
 \dop{G^\pt_\sp}(\q_0,\n_0,w_0) & = & C(\q_0,w_0) w_0^{-3/2} \sum_{\n} A(\n - \n_0'(\n),w_0) \\
-&& \exp{-\pi (\n - \n_0'(\n))^2/2 w_0^2 + \i 2 \pi \q_0 \ssp \n} \cop\pt\sp\n
+&& \exp{-\pi (\n - \n_0'(\n))^2/2 w_0^2 + \i 2 \pi \q_0 \ssp \n} \cop\pt\n\sp
 \end{eqnarray*}
 with the numerical factor:
 \begin{equation*}
@@ -1400,7 +1400,7 @@ A(\n - \n_0'(\n),w_0) \eqdef (2w_0^2)^{3/2} (1+2\N)^{-3} \sum_{\q} \exp{-2 \pi w
 where $\n_0'(\n)$ can be chosen arbitrarily in $\n_0 + ((1+2\N) \IZ)^3$. In the usual case where $1 \ll w_0 \ll \N$, this factor approximates to 1 if $\n_0'(\n)$ can be chosen such as $\| \n-\n_0'(\n) \| \ll \N$. To the zeroth order, the Hamiltonian evolution of the Gaussian wave packet $\ket{\Psi_0} = \dop{G^\pt_\sp}(\q_0,\n_0,w_0) \ket \vac$ is given by:
 \begin{eqnarray*}
 \ket{\Psi_t} & = & C(\q_0,w_0) (2w_0)^{3/2} (1+2\N)^{-3/2} \\
-&& \sum_{\q} \exp{-2 \pi w_0^2 \q^2 - \i 2 \pi \q \ssp \n_0 -\i 2 \pi \Ek \pt {\q_0+\q} (t - t_0) / \h} \cop\pt\sp{\q_0+\q} \ket \vac
+&& \sum_{\q} \exp{-2 \pi w_0^2 \q^2 - \i 2 \pi \q \ssp \n_0 -\i 2 \pi \Ek \pt {\q_0+\q} (t - t_0) / \h} \cop\pt{\q_0+\q}\sp \ket \vac
 \end{eqnarray*}
 If $w_0 \gg q_0^{-1}$, the saddle-point approximation $\Ek \pt {\q_0+\q} \approx \Ek \pt {\q_0} + \q \ssp \nabla_{\q} \Ek \pt {\q_0}$ can be used and it follows:
 \begin{eqnarray*}
