--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -1114,10 +1114,10 @@ Of course, this hypothesis is logically perfectly correct, but it is utmost diff
 %TODO: Philosophical issues: God
 %\section{God}
 
-%TODO: Philosophical issues: Mental birth
-%\section{Mental birth}
-%Und was gab das den Frauen für eine wehmütige Schönheit, wenn sie schwanger waren und standen, und in ihrem großen Leib, auf welchem die schmalen Hände unwillkürlich liegen blieben, waren zwei Früchte: ein Kind und ein Tod. Kam das dichte, beinah nahrhafte Lächeln in ihrem ganz ausgeräumten Gesicht nicht davon her, daß sie manchmal meinten, es wüchsen beide?
-%Rainer Maria Rilke: Die Aufzeichnungen des Malte Laurids Brigge
+\section{Mental birth}
+
+\renewcommand{\epigraphwidth}{10cm}
+\epigraph{Und was gab das den Frauen für eine wehmütige Schönheit, wenn sie schwanger waren und standen, und in ihrem großen Leib, auf welchem die schmalen Hände unwillkürlich liegen blieben, waren zwei Früchte: ein Kind und ein Tod. Kam das dichte, beinah nahrhafte Lächeln in ihrem ganz ausgeräumten Gesicht nicht davon her, daß sie manchmal meinten, es wüchsen beide?}{Rainer Maria Rilke, \\ \textit{Die Aufzeichnungen des Malte Laurids Brigge}}
 
 %TODO: Philosophical issues: Thought experiments
 %\chapter{Thought experiments}
