Replaced epigraph by an english translation

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -1116,8 +1116,8 @@ Of course, this hypothesis is logically perfectly correct, but it is utmost diff
 
 \section{Mental birth}
 
-\renewcommand{\epigraphwidth}{10cm}
-\epigraph{Und was gab das den Frauen für eine wehmütige Schönheit, wenn sie schwanger waren und standen, und in ihrem großen Leib, auf welchem die schmalen Hände unwillkürlich liegen blieben, waren zwei Früchte: ein Kind und ein Tod. Kam das dichte, beinah nahrhafte Lächeln in ihrem ganz ausgeräumten Gesicht nicht davon her, daß sie manchmal meinten, es wüchsen beide?}{Rainer Maria Rilke, \\ \textit{Die Aufzeichnungen des Malte Laurids Brigge}}
+\renewcommand{\epigraphwidth}{9cm}
+\epigraph{And what kind of melancholy beauty did it give women when they were pregnant and standing, and in their big bodies, on which their narrow hands involuntarily rested, were two fruits: a child and a death. Did not the concentrated, almost nourishing smile in their completely emptied-out faces come from their sometimes thinking that both were growing?}{Rainer Maria Rilke, \\ \textit{From The Notebooks of Malte Laurids Brigge}~\cite{Rilke1910}}
 
 %TODO: Philosophical issues: Thought experiments
 %\chapter{Thought experiments}
@@ -1797,6 +1797,12 @@ We extend these definitions periodically to all $\q \in \ILD$ by $\SAop \pt \q \
 \bibitem{Neumann1932} Neumann, J. v. (1932). \textit{Mathematische Grundlagen der Quantenmechanik}. Julius Springer, Berlin (Germany), 1932. \textit{Mathematical Foundations of Quantum Mechanics}. Princeton University Press, Princeton (New Jersey, United States), 1955.
 
 \bibitem{Rabin1981} Rabin, J. M. (1981). \htmladdnormallink{\textit{Long Range Interactions In Lattice Field Theory}}{http://www.slac.stanford.edu/pubs/slacreports/slac-r-240.html}. Ph.D. Thesis SLAC-0240, Stanford (California, United States), 1981.
+
+\bibitem{Rilke1910} Rilke, R. M. (1904). \htmladdnormallink{\textit{Die Aufzeichnungen des Malte Laurids Brigge}}{http://www.gutenberg.org/ebooks/2188}. Insel-Verlag, Leipzig (Germany), 1910. \htmladdnormallink{\textit{From The Notebooks of Malte Laurids Brigge}}{http://www.thefreelibrary.com/From+The+Notebooks+of+Malte+Laurids+Brigge.-a0182126899}.
+
+%English translation by Burton Pike
+%http://www.thefreelibrary.com/From+The+Notebooks+of+Malte+Laurids+Brigge.-a0182126899
+
 
 \bibitem{Spinoza1677} Spinoza, B. (1677). \textit{Ethica, Ordine Geometrico demonstrata}. Amsterdam (The Netherlands), 1677. \htmladdnormallink{\textit{The Ethics}}{http://www.gutenberg.org/ebooks/3800}. London (United Kingdom), 1883.
 
